--- a/sports_goods_shop.ipynb
+++ b/sports_goods_shop.ipynb
@@ -10,6 +10,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ac3dff1f",
+   "metadata": {},
+   "source": [
+    "## Оглавление  \n",
+    " - 1.1. [Описание задачи](#Описание-задачи)  \n",
+    " - 1.2. [Проблематика исследования](#Проблематика-исследования)  \n",
+    " - 1.3. [Решение](#Решение)  \n",
+    " - 1.4. [Предобработка данных](#Предобработка-данных)  \n",
+    "            - 1.4.2. [Объединение таблиц в единую витрину данных](#Объединение-таблиц-в-единую-витрину-данных)  \n",
+    "            - 1.4.3. [Выявление аномалий](#Выявление-аномалий)  \n",
+    " - 1.5. [Бинарная классификация](#Бинарная-классификация)  \n",
+    "            - 1.5.1. [Восстановление утерянных данных по таблице personal data в единой витрине данных](#Восстановление-утерянных-данных-по-таблице-personal-data-в-единой-витрине-данных)  \n",
+    " - 1.6. [Анализ итогов АБ-теста](#Анализ-итогов-АБ-теста)   \n",
+    "            - 1.6.5. [Общий вывод по АБ-тесту](#Общий-вывод-по-АБ-тесту)  \n",
+    " - 1.7. [Кластеризация](#Кластеризация)  \n",
+    "            - 1.7.1. [Feature Engineering](#Feature-Engineering)    \n",
+    "            - 1.8.4 [Выявление закономерностей в полученных кластерах](#Выявление-закономерностей-в-полученных-кластерах)   \n",
+    "            - 1.8.5 [Описание кластеров и методы работы с каждым из них](#Описание-кластеров-и-методы-работы-с-каждым-из-них)   \n",
+    " - 1.9 [Построение модели склонности клиента к покупке](#Построение-модели-склонности-клиента-к-покупке)   \n",
+    "            - 1.9.1 [Выбор модели машинного обучения](#Выбор-модели-машинного-обучения)    \n",
+    "            - 1.9.2 [Подготовка данных](#Подготовка-данных)  \n",
+    "            - 1.9.3 [Создание и обучение модели](#Создание-и-обучение-модели)  \n",
+    "            - 1.9.4 [Визуализация работы модели](#Визуализация-работы-модели)  \n",
+    "            - 1.9.5 [Результаты работы модели](#Результаты-работы-модели)  \n",
+    "            - 1.9.6 [Модель. Вариант 2](#Модель-Вариант-2)  \n",
+    "            - 1.9.7 [Интерпретация результатов модели](#Интерпретация-результатов-модели)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22606cd9",
    "metadata": {},
    "source": [
@@ -78,7 +108,7 @@
    "id": "429c8bed",
    "metadata": {},
    "source": [
-    "## Решение, которое представлено в исследовании"
+    "## Решение"
    ]
   },
   {
@@ -8905,7 +8935,7 @@
    "id": "47b6134a",
    "metadata": {},
    "source": [
-    "### Создание и обучение модели. Вариант 1."
+    "### Создание и обучение модели"
    ]
   },
   {
@@ -9146,7 +9176,7 @@
    "id": "389eb1e7",
    "metadata": {},
    "source": [
-    "### Результаты работы модели Варианта 1."
+    "### Результаты работы модели"
    ]
   },
   {
@@ -9162,7 +9192,7 @@
    "id": "71a2f705",
    "metadata": {},
    "source": [
-    "### Модель. Вариант 2"
+    "### Модель Вариант 2"
    ]
   },
   {
